# api/routes/greenhouses.js
@@ -5,6 +5,7 @@ const db = require('../db');
 const router = Router();
 
 //GREENHOUSE
+
 router.get('/api/v1/greenhouses', (req, res) => {
     db.all('SELECT * FROM garden_greenhouse', (err, rows) => {
         if (err) {
@@ -115,6 +116,19 @@ router.delete('/api/v1/greenhouses/:id', (req, res) => {
                 message: "Deleted"
             });
         }
+    });
+});
+
+//plants in a greenhouse
+router.get('/api/v1/greenhouses/plants', (req, res) => {
+    db.all('SELECT * FROM garden_plant_greenhouse', [], (err, rows) => {
+        if (err) {
+            return res.status(500).json({
+                code: 500,
+                message: "Query failed"
+            });
+        }
+        return res.status(200).json(rows);
     });
 });
 
