# api/routes/greenhousesPlants.js
@@ -4,8 +4,7 @@ const db = require('../db');
 
 const router = Router();
 
-//MapPlant
-router.get('/api/v1/greenhouse/:greenhouse_id/plants', (req, res) => {
+router.get('/api/v1/greenhouses/:greenhouse_id/plants', (req, res) => {
     const id = req.params.greenhouse_id;
     db.all('SELECT * FROM garden_plant_greenhouse WHERE greenhouse_id = ?', [id], (err, rows) => {
         if (err) {
@@ -24,9 +23,10 @@ router.get('/api/v1/greenhouse/:greenhouse_id/plants', (req, res) => {
     });
 });
 
-router.post('/api/v1/mapplants', (req, res) => {
-    const map = req.body;
-    db.run('INSERT INTO garden_plant_greenhouse (greenhouse_id, plant_id ) VALUES (?, ?)', [map.greenhouse_id, map.plant_id ], (err, result, fields) => {
+router.post('/api/v1/greenhouses/:greenhouseId/plants/:plantId', (req, res) => {
+    const greenhouseId = req.params.greenhouseId;
+    const plantId = req.params.plantId;
+    db.run('INSERT INTO garden_plant_greenhouse (greenhouse_id, plant_id ) VALUES (?, ?)', [ greenhouseId, plantId ], (err, result, fields) => {
         if (err) {
             return res.status(500).json({
                 code: 500,
@@ -37,25 +37,10 @@ router.post('/api/v1/mapplants', (req, res) => {
     });
 });
 
-router.put('/api/v1/mapplants/:greenhouse_id/:plant_id', (req, res) => {
-    const greenhouse_id = req.params.greenhouse_id;
-    const plant_id = req.params.plant_id;
-    const map = req.body;
-    db.run('UPDATE garden_plant_greenhouse SET ? WHERE greenhouse_id = ? AND plant_id = ?', [map, greenhouse_id, plant_id], (err, result, fields) => {
-        if (err) {
-            return res.status(500).json({
-                code: 500,
-                message: "Query failed"
-            });
-        }
-        return res.status(200).json(map);
-    });
-});
-
-router.delete('/api/v1/mapplants/:greenhouse_id/:plant_id', (req, res) => {
-    const greenhouse_id = req.params.greenhouse_id;
-    const plant_id = req.params.plant_id;
-    db.run('DELETE FROM garden_plant_greenhouse WHERE greenhouse_id = ? AND plant_id = ?', [greenhouse_id, plant_id], (err, result, fields) => {
+router.delete('/api/v1/greenhouses/:greenhouseId/plants/:plantId', (req, res) => {
+    const greenhouseid = req.params.greenhouseId;
+    const plantid = req.params.plantId;
+    db.run('DELETE FROM garden_plant_greenhouse WHERE greenhouse_id = ? AND plant_id = ?', [greenhouseId, plantId], (err, result, fields) => {
         if (err) {
             return res.status(500).json({
                 code: 500,
